2008-07-30  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: On constructor dont set the GrabControl for non ContextMenu.

	* MainMenu.cs: Set GrabControl on SetForm using current form.

2008-07-30  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: Chage grab_control to GrabControl and make it public.

2008-07-30  Everaldo Canuto  <ecanuto@novell.com>

	* MenuAPI.cs: Check if menu is activated before deactivate it in 
	ProcessShortcut.

2008-07-30  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayoutStyleCollection, TableLayoutStyle.cs, RowStyle.cs, 
	ColumnStyle.cs: 
	Make the TableLayoutStyle owned by the the TableLayoutPanel, so that:
	 - One style instance can only participate in a single style collection.
	 - Styles can request their owner to layout whenever their properties 
	 change.
	 [Fixes bugs #412583 and #412582]

2008-07-29  Ivan N. Zlatev  <contact@i-nz.net>

	* X11Keyboard.cs: Implement the generation of the LParam for 
	all keyboard messages.
	[Fixes bug #378728]

2008-07-28  Jonathan Pobst  <monkey@jpobst.com>

	* ToolStripButton.cs: Update Checked for CheckOnClick before
	raising the Click event.  [Fixes bug #412505]

2008-07-28  Ivan N. Zlatev  <contact@i-nz.net>

	* Form.cs: Remove some seems leftover code for non-TopLevel's 
	CreateParams, which is breaking ClientSize sizing, because it 
	removes the border window styles.

2008-07-27  Ivan N. Zlatev  <contact@i-nz.net>

	* PropertyGrid.cs: Invalidate the View when the PropertyTab 
	changes.

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayoutPanel.cs: Perform layout on GrowStyle change, so 
	that the change has an immediate effect.

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* ScrollableControl.cs: Update PerformLayout calls to include 
	provide the name of the property that changed.

2008-07-25  Ivan N. Zlatev  <contact@i-nz.net>

	* TableLayoutPanel.cs: Draw relative to the DisplayRectangle 
	location. Fixes drawing of border and cell borders if scrollable.
